sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: ')' expected but '}' found.
		if (plusPetit(i+1,i)) { echange(i,i+1 }
                                                      ^